[package]
name = "geyser-store"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.19"
base64 = "0.21.2"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.180", features = ["derive"] }
solana-sdk = "1.16.6"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
